# MyNotes

./: Makefile  T490-Stage.mm  papers.mm  requirements.txt  todo.md
MachPer/: hw1.lyx
ProbML/: hw1.lyx
ai/: Color.py  paper_list_stat.py
algo/: 3.py  81.searchinrotsarray2.cc  Makefile  compile.sh  helper.hpp  i.20221209.txt  lc.1.cc  lc.1.go  lc.1.jl  lc.1.lua  lc.1.py  lc.10.cc  lc.100.cc  lc.1004.py  lc.101.cc  lc.101.py  lc.102.bfs.py  lc.102.dfs.py  lc.104.cc  lc.104.py  lc.1071.py  lc.11.py  lc.111.cc  lc.112.cc  lc.1137.py  lc.114.cc  lc.1143.py  lc.1161.py  lc.118.py  lc.119.py  lc.120.cc  lc.1207.py  lc.121.cc  lc.121.py  lc.122.cc  lc.124.cc  lc.125.cc  lc.125.py  lc.1268.py  lc.128.cc  (+267 more)
blas/: Makefile  chart.sh  gemm1.c  gemm2.c  gemm3.c  gemm4.c  gemm5.c  gemm6.c  gemm7.c  gemm8.c  gemm9.c  main.cc  result  t.cc
books/: BeautifulArchitecture.md  Compilers.md  IntroducingPython.md  PPT.md  README.md  Sapiens.rst  UNP_SA-API  bookshelf.md  color-design.md  fbiphi.md  langchaozhidian.txt  lshort.txt  networkCountermeasure.txt  philosophy_of_art.md  psychology.md  pythonCookbook.ipynb
dsl/ninja/: build.ninja  hello.c  libhello.h  meson.build
graphic/: edu-gcfglobal-org.md  index.md
harmonica/: Makefile  huanlesong.ly  madeinabyss.ly  maliyouzhixiaoyanggao.ly  play.sh  test.ly
irrelevant/: Factor.py  Makefile  activations.py  ch_res18.py  cifar100.py  common.py  ct_res18dmy.py  ct_res18revat.py  ct_res18revatc.py  dTrain.py  decomp.py  fa_c2f2n.py  fa_c2f2revat.py  fa_c2f2revatc.py  fa_c2f2s.py  fa_c2f2tnrat.py  fa_c2f2trat.py  fa_c2f2uap.py  grev.py  (+8 more)
(+984 files in other folders)
